--- a/MyApplication/app/src/main/res/layout/activity_add_staff.xml
+++ b/MyApplication/app/src/main/res/layout/activity_add_staff.xml
@@ -82,10 +82,16 @@
             android:text="Date Of Joining-"
             />
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:inputType="date"
             android:id="@+id/staff_doj"
+            />
+        <ImageView
+            android:id="@+id/addstaffDatePicker"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@android:drawable/ic_menu_today"
             />
     </LinearLayout>
     <LinearLayout
