--- a/MyApplication/app/src/main/res/layout/activity_menu.xml
+++ b/MyApplication/app/src/main/res/layout/activity_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,13 @@
     android:orientation="vertical"
     tools:context=".Activities.MenuActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+<TextView
+    android:id="@+id/menu_test"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    />
         <android.support.v7.widget.RecyclerView
+            android:layout_below="@id/menu_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/myrecyclerViewMenu"
@@ -24,16 +25,10 @@
             android:layout_height="wrap_content"
             android:text="Proceed"
             android:id="@+id/buttonproceed"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
             />
-    </LinearLayout>
-    <FrameLayout
-        android:layout_width="300dp"
-        android:layout_height="450dp"
-        android:id="@+id/frameLayoutMenu"
-        android:scaleType="centerInside"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:elevation="5dp"
-    />
-</FrameLayout>
+
+</RelativeLayout>
 
 
