--- a/MyApplication/app/src/main/res/layout/menu_todo.xml
+++ b/MyApplication/app/src/main/res/layout/menu_todo.xml
@@ -96,15 +96,15 @@
                     android:id="@+id/menuaddminus"
                     android:textStyle="bold"
                     />
+
                 <TextView
+                    android:id="@+id/menuqty"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textSize="20sp"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:id="@+id/menuqty"
-                    />
+                    android:text="0"
+                    android:textSize="20sp" />
                 <TextView
                     android:textStyle="bold"
                     android:layout_width="20dp"
@@ -124,7 +124,13 @@
             android:text="offerHere"
             android:id="@+id/menuoffer"
             />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#000"
+            />
 
     </LinearLayout>
+
 
 </LinearLayout>
