--- a/MyApplication/app/src/main/res/layout/staff_todo.xml
+++ b/MyApplication/app/src/main/res/layout/staff_todo.xml
@@ -45,6 +45,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
+       <ImageView
+           android:layout_width="50dp"
+           android:layout_height="60dp"
+           android:src="@drawable/ic_attach_money_black_24dp"
+           android:layout_marginEnd="16dp"
+           android:layout_marginTop="16dp"
+           android:id="@+id/staff_list_payBtn"
+           />
         <ImageView
             android:layout_width="50dp"
             android:layout_height="60dp"
@@ -52,7 +60,6 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
             android:id="@+id/staff_list_callBtn"
-
             />
 
 
